--- a/style.css
+++ b/style.css
@@ -45,3 +45,57 @@
     font-size: 25px;
     font-weight: 700;
 }
+
+.newsletter-container{
+    margin-top: 150px;
+    width: 1120px;
+    height: 383px;
+    flex-shrink: 0;
+    border-radius: 60px;
+    background-color: var(--white-blue);
+}
+
+.wrap-input{
+    width: 400px;
+    margin: 30px auto;
+}
+
+.wrap-input .input-box{
+    position: relative;
+    width: 400px;
+    height: 65px;
+}
+
+.wrap-input .input-box .input{
+    background-color: white;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 17.5px;
+    color: #234CAD;
+    font-size: 18px;
+    font-weight: 400;
+    padding-left: 25px;
+
+}
+::placeholder{
+    opacity: 0.5;
+}
+
+.wrap-input .input-box .btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;;
+    width: 45px;
+    height: 45px;
+    background-color: var(--dark-blue);
+    border-radius: 16.5px;
+    color: white;
+    font-size: 25px;
+    font-weight: 500;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
