--- a/style-rozan.css
+++ b/style-rozan.css
@@ -92,7 +92,9 @@ body {
   background-color: #ffffff;
   border-radius: 20px;
   padding: 15px;
-  box-shadow: 0 50px 100px 0 rgba(35, 76, 173, 0.116), 0 6px 20px 0 rgba(35, 76, 173, 0.116);
+  box-shadow: 0 0 0 0 rgba(35, 76, 173, 0.116), 0 60px 100px 0 rgba(35, 76, 173, 0.095);
+  z-index: 1;
+  position: relative;
 }
 .box-2 img {
   max-width: 100%;
@@ -127,6 +129,8 @@ body {
   background-color: #ffffff;
   border-radius: 20px;
   padding: 15px;
+  z-index: 0;
+  position: relative;
 }
 .box-3 img {
   max-width: 100%;
@@ -379,6 +383,9 @@ body {
   background-color: #ffffff;
   border-radius: 20px;
   padding: 15px;
+  box-shadow: 0 0 0 0 rgba(35, 76, 173, 0.116), 0 60px 100px 0 rgba(35, 76, 173, 0.095);
+  z-index: 2;
+  position: relative;
 }
 .border-box9 {
   background-color: #234cad;
@@ -429,6 +436,9 @@ body {
   background-color: #ffffff;
   border-radius: 20px;
   padding: 15px;
+  box-shadow: 0 0 0 0 rgba(35, 76, 173, 0.116), 0 60px 100px 0 rgba(35, 76, 173, 0.095);
+  position: relative;
+  z-index: 1;
 }
 .border-box10 {
   background-color: #234cad;
@@ -479,6 +489,8 @@ body {
   background-color: #ffffff;
   border-radius: 20px;
   padding: 15px;
+  position: relative;
+  z-index: 0;
 }
 .border-box11 {
   background-color: #234cad;
